2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y: Make struct and array constructors primary
	syntax entities.
	* testsuite/poke.pkl/scons-70.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 2.3.
	* doc/gendocs_template: Likewise.
	* NEWS: Entries for 2.3.

2022-03-31  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Fix
	diagnostics in 32-bit.

2022-03-29  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update version to 2.2.
	* doc/gendocs_template: Likewise.
	* NEWS: Update for 2.2.

2022-03-16  Jose E. Marchesi  <jemarch@gnu.org>
2022-03-16  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/ios-dev-stream.c (ios_dev_stream_pread): Fix call to
	fread.

2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (my_decl_map_fn): Always return PK_NULL as
	`value' for type declarations.
	* libpoke/libpoke.h: Add decription of the arguments got by the
	pk_map_decl_fn callback.
	* testsuite/poke.libpoke/decls.c: New file.
	* testsuite/poke.libpoke/Makefile.am (decls_SOURCES): Define.
	(decls_CPPFLAGS): Likewise.
	(decls_CFLAGS): Likewise.
	(decls_LDADD): Likewise.
	(check_PROGRAMS): Add decls.
	* testsuite/poke.libpoke/libpoke.exp: Run the decls tests.

2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf-64.pk (Elf64_Shdr): sh_entsize is an offset in
	bytes, not bits.
	* pickles/elf-32.pk (Elf32_Shdr): Likewise.

2022-03-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h: Clarify that pk_array_type_bound always
	returns PK_NULL at the time being.

2022-03-08  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans1_ps_format): Fix format string
	arg suffix when there's a %%.
	* testsuite/poke.pkl/format-40.pk: New test.
	* testsuite/poke.pkl/format-41.pk: Likewise.
	* testsuite/poke.pkl/format-42.pk: Likewise.