@@ -1,0 +1,8 @@
+/* { dg-do run } */
+
+var foo = lambda int:
+{
+};
+
+/* { dg-command {try foo; catch if E_no_return { print "caught\n"; } } } */
+/* { dg-output "caught" } */
