@@ -1,5 +1,15 @@
 2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.h: Prototype for pkl_ast_format_loc.
+	* libpoke/pkl-ast.c (pkl_ast_format_loc): New function.
+	* libpoke/pkl-gen.c (pkl_gen_ps_func): Add function name to
+	E_no_return exception whenever possible.
+	* testsuite/poke.pkl/fun-no-return-1.pk: New test.
+	* testsuite/poke.pkl/fun-no-return-2.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2022-04-08  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-tab.y: Make struct and array constructors primary
 	syntax entities.
 	* testsuite/poke.pkl/scons-70.pk: New test.
